--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: gerenciando maquinas </li>
          <li> Docker: Creando continers</li>
          <li> Ansible </li>
          <li> Integracion continua: madurez </li>
