Modificando el nombre del curso de ansible

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: gerenciando maquinas </li>
          <li> Docker: Creando continers</li>
-         <li> Ansible </li>
+         <li> Ansible: Infraestructura</li>
          <li> Integracion continua: madurez </li>
          <li>Kubernetes introduccion a conteiners</li>
      </ul>
